--- a/src/index.html
+++ b/src/index.html
@@ -7,12 +7,13 @@
 
   <base href="/" />
 
-  <meta name="color-scheme" content="light dark" />
+  <!-- <meta name="color-scheme" content="light dark" /> -->
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <meta name="format-detection" content="telephone=no" />
   <meta name="msapplication-tap-highlight" content="no" />
 
   <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
+  <script src="https://cdn.tailwindcss.com"></script>
 
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
