working on order status

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,16 @@
 
   <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <!--Googleapis---map-->
+  <!-- <link href="https://fonts.googleapis.com/css2?family=Acme&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com"> -->
+
+  <link href="https://fonts.googleapis.com/css2?family=Acme&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+
 
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -23,5 +33,7 @@
 <body>
   <app-root></app-root>
 </body>
+
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAuoy_mOPfYGqoZDE2JUT0aceQFEe73yZE"></script>
 
 </html>
