--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,7 @@
   <app-root></app-root>
 </body>
 
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAuoy_mOPfYGqoZDE2JUT0aceQFEe73yZE"></script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC1Cz13aBYAbBYJL0oABZ8KZnd7imiWwA4"></script>
+
 
 </html>
